--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <style type="text/css"></style>
 </head>
 <body>
-
-
-<script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.min.js"></script>
-<script src="./app.js"></script>
+    <h1 class="main-title">2D Platformer Using Phaser.io 3</h1>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.min.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
